added inspiring quote generator project

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
   			<span class="radius label">Movie Database API</span>
   			
   			<h5>"Latest Movie Releases" Web App</h5>
-  			<p>Capstone project for Thinkful's Front End Development Course(HTML5, CSS3, Bootstrap, jQuery, Ajax, & a movie database api)</p> 
+  			<p>Capstone project for Thinkful's Front End Development Course. Data from this <a href="http://docs.themoviedb.apiary.io/">Movie Database API</a>.</p> 
 	  		<p class="upper_descr">Link: <a href="http://wilbert-abreu.github.io/movie-page/" target="_blank">wilbert-abreu.github.io/movie-page/</a></p>
 			<p>Github: <a href="https://github.com/wilbert-abreu/movie-page" target="_blank">github.com/wilbert-abreu/movie-page</a></p>
   		</div>
   		<div class="large-6 columns">
-	  		<a href="http://bgl-boardgamelab.rhcloud.com" target="_blank">
+	  		<a href="http://wilbert-abreu.github.io/movie-page/" target="_blank">
 	  			<img class="pics" src="images/movie_app.png">
 	  		</a>
   		</div>
@@ -44,21 +44,20 @@
 
   	<div class="row">
   		<div class="large-6 columns">
-	  		<a href="http://szostakowicz.github.io/auditskr" target="_blank">
-	  			<img class="pics" src="images/reportingtool.png">
+	  		<a href="http://wilbert-abreu.github.io/inspiring-quote-generator" target="_blank">
+	  			<img class="pics" src="images/inspiring-quote-generator.png">
 	  		</a>
   		</div>
   		<div class="large-6 columns">
-  			<span class="radius label upper_label">HTML</span>
-  			<span class="radius label">CSS</span>
+  			<span class="radius label upper_label">HTML5</span>
+  			<span class="radius label">SCSS</span>
   			<span class="radius label">Javascript</span>
   			<span class="radius label">jQuery</span>
-  			<span class="radius label">jQuery Mobile</span>
-  			<h5>Aplikacja do szybkiego tworzenia pisemnych raportów</h3>
-  			<p> Po odznaczeniu przez testującego/nauczyciela wyniku danego ucznia na kilku skalach oraz przełącznikach generowany jest pisemny raport odzwierciedlający poziom umiejętności ucznia w pisaniu, czytaniu, słuchaniu i mówieniu. Aplikacja ta była używana przez dwie osoby do generowania reportów po przeprowadzeniu audytów językowych.
-  			</p> 
-  			<p class="upper_descr">strona: <a href="http://szostakowicz.github.io/auditskr" target="_blank"> szostakowicz.github.io/auditskr </a></p>
-			<p>kod: <a href="http://github.com/szostakowicz/auditskr" target="_blank"> github.com/szostakowicz/auditskr </a></p>
+  			<span class="radius label">Bootstrap</span>
+  			<h5>Inspiring Quote Generator</h3>
+  			<p>Sharing my favorite quotes with the world.</p> 
+  			<p class="upper_descr">Link: <a href="http://wilbert-abreu.github.io/inspiring-quote-generator" target="_blank">wilbert-abreu.github.io/inspiring-quote-generator</a></p>
+			<p>Github: <a href="https://github.com/wilbert-abreu/inspiring-quote-generator" target="_blank">github.com/wilbert-abreu/inspiring-quote-generator</a></p>
   		</div>
   	</div>
 
