--- a/index.html
+++ b/index.html
@@ -66,21 +66,19 @@
 
   	<div class="row">
   		<div class="large-6 columns">
-  			<span class="radius label">HTML</span>
-  			<span class="radius label">CSS</span>
-  			<span class="radius label">Javascript</span>
-  			<span class="radius label">jQuery</span>
-  			<span class="radius label">jQuery Mobile</span>
-  			<h5>Aplikacja mobilna do nauki obcojęzycznego słownictwa</h5> 
-  			<p>Ten projekt jest jeszcze <span style="color:red">w trakcie 
-  			realizacji</span>. Prawie cała logika front-end jest już jednak gotowa. Kod widoczy w GitHub można 'opakować' przez PhoneGap, wygenerować plik apk i zgrać na telefon komórkowy.
+  			<span class="radius label">HTML5</span>
+  			<span class="radius label">CSS3</span>
+  			<span class="radius label">Bootstap</span>
+  			<h5><a href="http://hired.com">Hired.com</a> Clone</h5> 
+  			<p>Fun project
   			</p> 
-  			<p class="upper_descr">strona: <a href="http://szostakowicz.github.io/languageapp" target="_blank" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=430px,height=750px');return false;">szostakowicz.github.io/languageapp</a></p>
-			<p>kod: <a href="http://github.com/szostakowicz/languageapp" target="_blank">github.com/szostakowicz/languageapp</a></p>
+  			<p class="upper_descr">Link: <a href="http://wilbert-abreu.github.io/hired.com-clone" target="_blank">wilbert-abreu.github.io/hired.com-clone</a></p>
+			<p>Github: <a href="https://github.com/wilbert-abreu/hired.com-clone" target="_blank">github.com/wilbert-abreu/hired.com-clone</a></p>
+
   		</div>
   		<div class="large-6 columns">
-  			<a href="http://szostakowicz.github.io/languageapp" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,width=430px,height=750px');return false;">
-  				<img class="pics mobile" src="images/appmobile.png">
+  			<a href="http://wilbert-abreu.github.io/hired.com-clone">
+  				<img class="pics mobile" src="images/hired-clone.png">
   			</a>
   		</div>
   	</div>
@@ -92,7 +90,7 @@
 			</blockquote>
 		</div>
 		<div class="large-4 columns">
-	    	<h4>e-mail: szostakowicz@wp.pl</h4>
+	    	<h4>e-mail: abreu.wilbert@gmail.com</h4>
 	    </div>
 	</div>
 
