changed quote and email format

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   			<span class="radius label">CSS3</span>
   			<span class="radius label">Bootstap</span>
   			<h5><a href="http://hired.com">Hired.com</a> Clone</h5> 
-  			<p>Fun project
+  			<p>Created a clone of the Hired.com hompage.
   			</p> 
   			<p class="upper_descr">Link: <a href="http://wilbert-abreu.github.io/hired.com-clone" target="_blank">wilbert-abreu.github.io/hired.com-clone</a></p>
 			<p>Github: <a href="https://github.com/wilbert-abreu/hired.com-clone" target="_blank">github.com/wilbert-abreu/hired.com-clone</a></p>
@@ -84,12 +84,12 @@
   	</div>
 
   	<div class="row top_bot">
-		<div class="large-8 columns">
+		<div class="large-7 columns">
 			<blockquote>
-			  <p id="quote">Computers aren't the thing. They are the thing that gets us to the thing.<cite id="quote_name">Halt and Catch Fire (TV series)</cite></p>
+			  <p id="quote">Create something today even if it sucks<cite id="quote_name">Unkown</cite></p>
 			</blockquote>
 		</div>
-		<div class="large-4 columns">
+		<div class="large-5 columns">
 	    	<h4>e-mail: abreu.wilbert@gmail.com</h4>
 	    </div>
 	</div>
