--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   	<div class="row top_bot">
 		<div class="large-7 columns">
 			<blockquote>
-			  <p id="quote">Create something today even if it sucks<cite id="quote_name">Unkown</cite></p>
+			  <p id="quote">Create something today even if it sucks<cite id="quote_name">Unknown</cite></p>
 			</blockquote>
 		</div>
 		<div class="large-5 columns">
