Updated shopping list image link

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
   		</div>
   		<div class="large-6 columns">
-  			<a href="http://http://wilbert-abreu.github.io/shopping-list-jquery/">
+  			<a href="http://wilbert-abreu.github.io/shopping-list-jquery/">
   				<img class="pics mobile" src="images/shopping-list-app.png">
   			</a>
   		</div>
